--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "realtime-tracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "a realtime tracking app",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,11 +9,13 @@
     "dev": "nodemon app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Prithvi Pratap",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "http": "^0.0.1-security",
+    "path": "^0.12.7",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
